fixed title sometimes overflowing on second line

--- a/style/base.css
+++ b/style/base.css
@@ -31,8 +31,14 @@ body {
 }
 
 .navbar .navbar-brand {
+  padding-top: 2px;
+}
+
+.navbar .navbar-brand a{
+  color: #434343;
   font-weight: bold;
   font-size: 20px;
+  text-shadow: 1px 3px 2px rgba(0,0,0,0.2);
 }
 
 .collapse {
@@ -223,7 +229,7 @@ th.hours {
     background-color: transparent;
   }
 	
-	.navbar .navbar-brand {
+  .navbar .navbar-brand a{
     font-size: 14px;
   }
 
